--- a/README.org
+++ b/README.org
@@ -1,8 +1,8 @@
-# deshi_ponno
+* deshi_ponno
 
 A new Flutter project.
 
-## Getting Started
+** Getting Started
 
 This project is a starting point for a Flutter application.
 
