--- a/README.org
+++ b/README.org
@@ -8,9 +8,9 @@ This project is a starting point for a Flutter application.
 
 A few resources to get you started if this is your first Flutter project:
 
-- [[https:docs.flutter.dev/get-started/codelab][Lab: Write your first Flutter app]]
-- [[https:docs.flutter.dev/cookbook][Cookbook: Useful Flutter samples]]
+- [[https://docs.flutter.dev/get-started/codelab][Lab: Write your first Flutter app]]
+- [[https://docs.flutter.dev/cookbook][Cookbook: Useful Flutter samples]]
 
 For help getting started with Flutter development, view the
-[[https:docs.flutter.dev/][online documentation]], which offers tutorials,
+[[https://docs.flutter.dev/][online documentation]], which offers tutorials,
 samples, guidance on mobile development, and a full API reference.
