added login and signup page translations

--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -11,5 +11,11 @@
   "name": "নাম",
   "brand": "ব্র্যান্ড",
   "history": "হিস্টরি",
-  "product_details": "পণ্যের বিস্তারিত"
+  "product_details": "পণ্যের বিস্তারিত",
+  "login": "লগইন করুন",
+  "no_account": "আপনার একাউন্ট নেই?",
+  "sign_up": "সাইন আপ করুন",
+  "email": "ইমেইল",
+  "password": "পাসওয়ার্ড",
+  "already_account": "আপনার আগে থেকে একাউন্ট আছে?"
 }
