--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -17,5 +17,6 @@
   "sign_up": "সাইন আপ করুন",
   "email": "ইমেইল",
   "password": "পাসওয়ার্ড",
-  "already_account": "আপনার আগে থেকে একাউন্ট আছে?"
+  "already_account": "আপনার আগে থেকে একাউন্ট আছে?",
+  "price": "দাম"
 }
