--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -17,5 +17,6 @@
   "sign_up": "Sign up",
   "email": "Email",
   "password": "Password",
-  "already_account": "Already have an account?"
+  "already_account": "Already have an account?",
+  "price": "Price"
 }
