--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -10,7 +10,7 @@
   "scan_product": "পণ্য স্ক্যান করুন",
   "name": "নাম",
   "brand": "ব্র্যান্ড",
-  "history": "হিস্টরি",
+  "history": "হিস্টোরি",
   "product_details": "পণ্যের বিস্তারিত",
   "login": "লগইন করুন",
   "no_account": "আপনার একাউন্ট নেই?",
