--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -18,5 +18,6 @@
   "email": "ইমেইল",
   "password": "পাসওয়ার্ড",
   "already_account": "আপনার আগে থেকে একাউন্ট আছে?",
-  "price": "দাম"
+  "price": "মূল্য",
+  "taka": "টাকা"
 }
