--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -18,5 +18,6 @@
   "email": "Email",
   "password": "Password",
   "already_account": "Already have an account?",
-  "price": "Price"
+  "price": "Price",
+  "taka": "taka"
 }
