--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -19,5 +19,6 @@
   "password": "পাসওয়ার্ড",
   "already_account": "আপনার আগে থেকে একাউন্ট আছে?",
   "price": "মূল্য",
-  "taka": "টাকা"
+  "taka": "টাকা",
+  "origin": "পণ্যের উৎস"
 }
