--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -19,5 +19,6 @@
   "password": "Password",
   "already_account": "Already have an account?",
   "price": "Price",
-  "taka": "taka"
+  "taka": "taka",
+  "origin": "Origin"
 }
