updated some langs

--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -11,6 +11,8 @@
   "name": "নাম",
   "brand": "ব্র্যান্ড",
   "history": "হিস্টোরি",
+  "recents": "সাম্প্রতিক",
+  "no_recents": "সাম্প্রতিক কোনো স্ক্যান নেই",
   "product_details": "পণ্যের বিস্তারিত",
   "login": "লগইন করুন",
   "no_account": "আপনার একাউন্ট নেই?",
@@ -20,5 +22,6 @@
   "already_account": "আপনার আগে থেকে একাউন্ট আছে?",
   "price": "মূল্য",
   "taka": "টাকা",
-  "origin": "পণ্যের উৎস"
+  "origin": "পণ্যের উৎস",
+  "profile": "প্রোফাইল"
 }
