dynamic color scheme added

--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -23,5 +23,6 @@
   "price": "মূল্য",
   "taka": "টাকা",
   "origin": "পণ্যের উৎস",
-  "profile": "প্রোফাইল"
+  "profile": "প্রোফাইল",
+  "material_u": "মেটেরিয়াল ইউ"
 }
