--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -23,5 +23,6 @@
   "price": "Price",
   "taka": "taka",
   "origin": "Origin",
-  "profile": "Profile"
+  "profile": "Profile",
+  "material_u": "Material ou"
 }
