fixed material theme

--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -24,5 +24,5 @@
   "taka": "টাকা",
   "origin": "পণ্যের উৎস",
   "profile": "প্রোফাইল",
-  "material_u": "মেটেরিয়াল ইউ"
+  "material_theme": "মেটেরিয়াল থিম"
 }
