--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -24,5 +24,5 @@
   "taka": "taka",
   "origin": "Origin",
   "profile": "Profile",
-  "material_u": "Material ou"
+  "material_theme": "Material theme"
 }
