added new translations

--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -24,5 +24,6 @@
   "taka": "টাকা",
   "origin": "পণ্যের উৎস",
   "profile": "প্রোফাইল",
-  "material_theme": "মেটেরিয়াল থিম"
+  "material_theme": "মেটেরিয়াল থিম",
+  "all": "সব"
 }
