--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -24,5 +24,6 @@
   "taka": "taka",
   "origin": "Origin",
   "profile": "Profile",
-  "material_theme": "Material theme"
+  "material_theme": "Material theme",
+  "all": "All"
 }
