added about app button

--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -25,5 +25,6 @@
   "origin": "পণ্যের উৎস",
   "profile": "প্রোফাইল",
   "material_theme": "ম্যাটারিয়াল থিম",
-  "all": "সব"
+  "all": "সব",
+  "about": "অ্যাপ সম্পর্কে"
 }
