--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -25,5 +25,6 @@
   "origin": "Origin",
   "profile": "Profile",
   "material_theme": "Material theme",
-  "all": "All"
+  "all": "All",
+  "about": "About the app"
 }
