--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -13,7 +13,7 @@
   "history": "হিস্টোরি",
   "recents": "সাম্প্রতিক",
   "no_recents": "সাম্প্রতিক কোনো স্ক্যান নেই",
-  "product_details": "পণ্যের বিস্তারিত",
+  "product_details": "পণ্যের বিবরণ",
   "login": "লগইন করুন",
   "no_account": "আপনার একাউন্ট নেই?",
   "sign_up": "সাইন আপ করুন",
@@ -26,5 +26,6 @@
   "profile": "প্রোফাইল",
   "material_theme": "ম্যাটারিয়াল থিম",
   "all": "সব",
+  "app_description": "আমাদের অ্যাপে স্বাগতম! QR এবং বারকোড স্ক্যান করার মাধ্যমে, আমাদের অ্যাপ আপনাকে পণ্য সম্পর্কে বিস্তারিত তথ্য পেতে সহায়তা করে। কোডটি স্ক্যান করুন, এবং আপনি প্রতিটি আইটেমের উপাদান, পুষ্টির মান এবং উৎপত্তিস্থল সম্পর্কে জানতে পারবেন। অ্যালার্জি পরীক্ষা করার জন্য বা স্থানীয় উৎসের পণ্য খুঁজে বের করার জন্য, আমাদের অ্যাপ আপনাকে তথ্য প্রদান করে যাতে আপনি সচেতন সিদ্ধান্ত নিতে পারেন। একটি নিরাপদ এবং আরও তথ্যসমৃদ্ধ কেনাকাটার অভিজ্ঞতা উপভোগ করুন!",
   "about": "অ্যাপ সম্পর্কে"
 }
