--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -26,5 +26,6 @@
   "profile": "Profile",
   "material_theme": "Material theme",
   "all": "All",
+  "app_description": "Welcome to our app! With the ability to scan QR and barcodes, our app helps you easily find detailed information about products. Simply scan the code, and you’ll discover the ingredients, nutritional values, and the region of origin for each item. Whether you’re checking for allergens or looking for locally sourced products, our app provides you with the information you need to make informed choices. Enjoy a safer and more informed shopping experience!",
   "about": "About the app"
 }
