--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -29,7 +29,10 @@
   "app_description": "আমাদের অ্যাপে স্বাগতম! QR এবং বারকোড স্ক্যান করার মাধ্যমে, আমাদের অ্যাপ আপনাকে পণ্য সম্পর্কে বিস্তারিত তথ্য পেতে সহায়তা করে। কোডটি স্ক্যান করুন, এবং আপনি প্রতিটি আইটেমের উপাদান, পুষ্টির মান এবং উৎপত্তিস্থল সম্পর্কে জানতে পারবেন। অ্যালার্জি পরীক্ষা করার জন্য বা স্থানীয় উৎসের পণ্য খুঁজে বের করার জন্য, আমাদের অ্যাপ আপনাকে তথ্য প্রদান করে যাতে আপনি সচেতন সিদ্ধান্ত নিতে পারেন। একটি নিরাপদ এবং আরও তথ্যসমৃদ্ধ কেনাকাটার অভিজ্ঞতা উপভোগ করুন!",
   "about": "অ্যাপ সম্পর্কে",
   "go_next": "এগিয়ে যান",
-  "next": "নেক্সট",
+  "next": "পরবর্তী",
+  "done": "এগিয়ে যান",
+  "back": "ফিরে",
+  "previous": "পূর্ববর্তী",
   "select_language": "ভাষা পছন্দ করুন",
   "select_theme": "থিম পছন্দ করুন"
 }
