--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -38,6 +38,7 @@
   "allow_permission": "পারমিশন দিন",
   "allow_from_settings": "সেটিংস থেকে পারমিশন দিন",
   "previous": "পূর্ববর্তী",
+  "give_review": "রিভিউ দিন",
   "select_language": "ভাষা পছন্দ করুন",
   "select_theme": "থিম পছন্দ করুন"
 }
