--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -38,6 +38,7 @@
   "allow_permission": "Allow permission",
   "allow_from_settings": "Allow from settings",
   "previous": "Previous",
+  "give_review": "Give review",
   "select_language": "Select language",
   "select_theme": "Select theme"
 }
