--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -11,6 +11,8 @@
   "scan_product": "পণ্য স্ক্যান করুন",
   "name": "নাম",
   "brand": "ব্র্যান্ড",
+  "brands": "ব্র্যান্ড",
+  "category": "ক্যাটেগরি",
   "history": "হিস্টোরি",
   "recents": "সাম্প্রতিক",
   "no_recents": "সাম্প্রতিক কোনো স্ক্যান নেই",
