updated admin page

--- a/assets/lang/bn.json
+++ b/assets/lang/bn.json
@@ -42,5 +42,6 @@
   "previous": "পূর্ববর্তী",
   "give_review": "রিভিউ দিন",
   "select_language": "ভাষা পছন্দ করুন",
-  "select_theme": "থিম পছন্দ করুন"
+  "select_theme": "থিম পছন্দ করুন",
+  "admin": "এডমিন"
 }
