--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -42,5 +42,6 @@
   "previous": "Previous",
   "give_review": "Give review",
   "select_language": "Select language",
-  "select_theme": "Select theme"
+  "select_theme": "Select theme",
+  "admin": "Admin"
 }
